--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 				<h2>BEN'S ALIEN FRIENDS</h2>
 				<div class="friend">
 					<ul>
-						<li><img src="img/limuel.jpg" ><a href="" target="_blank" title="Visit KNUCKLES's page">KNUCKLES</a> from SONIC THE HEDGEHOG</li>
+						<li><img src="img/kim.jfif " ><a href="" target="_blank" title="Visit KNUCKLES's page">KIM DOKJA</a> from ORV</li>
 
-						<li><img src="img/kim.jfif"><a href="https://sopeya.github.io/WS02-MID1/?fbclid=IwAR235nGsrQT6Y2onCJp_POTvsJvjOAmLRvVcxbwN1_-2wIhAxQm6IZe9vU4">KIM DOKJA</a> from ORV</li> 
+						<li><img src="img/limuel.jpg"><a href="https://sopeya.github.io/WS02-MID1/?fbclid=IwAR235nGsrQT6Y2onCJp_POTvsJvjOAmLRvVcxbwN1_-2wIhAxQm6IZe9vU4" target="_blank" title="Visit KNUCKLES's page >KNUCKLES</a> from SONIC THE HEDGEHOG</li> 
 
 						<li><img src="img/marian.jpg"> <a href="https://mariandesuu.github.io/WS02-MID1/?fbclid=IwAR0Te4siVIn3kOAF7kODik90g2ceMghTV4PdfrctYbFZPlsaMUuCXNgQCi0" target="_blank" title="Visit CINNAMOROLL's page">CINNAMOROLL</a> from SANRIO</li>
 
