--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 						<li><img src="img/lex.jpg"> <a href="https://lexter-manuel.github.io/WS02-MID1/?fbclid=IwAR0zU_IDQGf7aBQXWch7_EOhyBIX_6uazyLEPxZ0P7wazj_10lHW006U3bA" target="_blank" title="Visit ISAGI's page">ISAGI YOICHI</a> from BLUE LOCK</li>
 
 						<li><img src="img/david.jpg"> <a href="https://aronsagnit.github.io/WS02-MID1/?fbclid=IwAR3NisJzR-Fr3TZkXwSAllQWip3XRwy7usu2HyfOOvENFqR5loXnoNiNPAo"target="_blank" title="Visit DAVID's page">DAVID MARTINES</a> from CYBERPUNK</li>
+						
+						<li><img src="img/jeny.jpgf"><a href="https://jennyroseformon.github.io/WS02-MID1/" target="_blank" title="Visit MERIDA's page">KIM DOKJA</a> from BRAVE</li>
 					</ul>
 				</div>
 			</div>
