--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<ul>
 						<li><img src="img/kim.jfif"><a href="https://sopeya.github.io/WS02-MID1/?fbclid=IwAR235nGsrQT6Y2onCJp_POTvsJvjOAmLRvVcxbwN1_-2wIhAxQm6IZe9vU4" target="_blank" title="Visit KIM DOKJA's page">KIM DOKJA</a> from ORV</li>
 
-						<li><img src="img/knuckles.jpg"><a href="https://limuelmiguel.github.io/ITWS02-MID1/?fbclid=IwAR3WGKhSvjOlecVPLTS6fi6c6tkPAwmrD3GMIvY_BOPKTqxy2XmgZS0Z9Lg" target="_blank" title="Visit KNUCKLES's page">KNUCKLES</a> from SONIC THE HEDGEHOG</li>
+						<li><img src="img/knuckles.jpg"><a href="https://limuelmiguel.github.io/ITWS02-MID1/?fbclid=IwAR3WGKhSvjOlecVPLTS6fi6c6tkPAwmrD3GMIvY_BOPKTqxy2XmgZS0Z9Lg" target="_blank" title="Visit KNUCKLES's page">KNUCKLES</a> from SONIC </li>
 
 						<li><img src="img/lex.jpg"><a href="https://lexter-manuel.github.io/WS02-MID1/?fbclid=IwAR0zU_IDQGf7aBQXWch7_EOhyBIX_6uazyLEPxZ0P7wazj_10lHW006U3bA" target="_blank" title="Visit ISAGI's page">ISAGI YOICHI</a> from BLUE LOCK</li>
 
