--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<h2>BEN'S ALIEN FRIENDS</h2>
 				<div class="friend">
 					<ul>
-						<li><img src="img/kim.jfif"><a href="https://sopeya.github.io/WS02-MID1/?fbclid=IwAR235nGsrQT6Y2onCJp_POTvsJvjOAmLRvVcxbwN1_-2wIhAxQm6IZe9vU4" target="_blank" title="Visit KIM DOKJA's page">KIM DOKJA</a> from ORV</li>
+						<li><a href="https://sopeya.github.io/WS02-MID1/?fbclid=IwAR235nGsrQT6Y2onCJp_POTvsJvjOAmLRvVcxbwN1_-2wIhAxQm6IZe9vU4" target="_blank" title="Visit KIM DOKJA's page"><img src="img/kim.jfif"></a><b>KIM DOKJA</b> from ORV</li>
 
 						<li><img src="img/knuckles.jpg"><a href="https://limuelmiguel.github.io/ITWS02-MID1/?fbclid=IwAR3WGKhSvjOlecVPLTS6fi6c6tkPAwmrD3GMIvY_BOPKTqxy2XmgZS0Z9Lg" target="_blank" title="Visit KNUCKLES's page">KNUCKLES</a> from SONIC </li>
 
