--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 					<ul>
 						<li><a href="https://sopeya.github.io/WS02-MID1/?fbclid=IwAR235nGsrQT6Y2onCJp_POTvsJvjOAmLRvVcxbwN1_-2wIhAxQm6IZe9vU4" target="_blank" title="Visit KIM DOKJA's page"><img src="img/kim.jfif"></a><b>KIM DOKJA</b> from ORV</li>
 
-						<li><img src="img/knuckles.jpg"><a href="https://limuelmiguel.github.io/ITWS02-MID1/?fbclid=IwAR3WGKhSvjOlecVPLTS6fi6c6tkPAwmrD3GMIvY_BOPKTqxy2XmgZS0Z9Lg" target="_blank" title="Visit KNUCKLES's page">KNUCKLES</a> from SONIC </li>
+						<li><a href="https://limuelmiguel.github.io/ITWS02-MID1/?fbclid=IwAR3WGKhSvjOlecVPLTS6fi6c6tkPAwmrD3GMIvY_BOPKTqxy2XmgZS0Z9Lg" target="_blank" title="Visit KNUCKLES's page"><img src="img/knuckles.jpg"></a><b>KNUCKLES</b> from SONIC </li>
 
-						<li><img src="img/lex.jpg"><a href="https://lexter-manuel.github.io/WS02-MID1/?fbclid=IwAR0zU_IDQGf7aBQXWch7_EOhyBIX_6uazyLEPxZ0P7wazj_10lHW006U3bA" target="_blank" title="Visit ISAGI's page">ISAGI YOICHI</a> from BLUE LOCK</li>
+						<li><a href="https://lexter-manuel.github.io/WS02-MID1/?fbclid=IwAR0zU_IDQGf7aBQXWch7_EOhyBIX_6uazyLEPxZ0P7wazj_10lHW006U3bA" target="_blank" title="Visit ISAGI's page"><img src="img/lex.jpg"></a><b>ISAGI YOICHI</b> from BLUE LOCK</li>
 
-						<li><img src="img/jeny.jpg"><a href="https://jennyroseformon.github.io/WS02-MID1/"target="_blank" title="Visit MERIDA's page">MERIDA</a> from BRAVE</li>
+						<li><a href="https://jennyroseformon.github.io/WS02-MID1/"target="_blank" title="Visit MERIDA's page"><img src="img/jeny.jpg"></a><b>KIM DOKJA</b> from BRAVE</li>
 
-						<li><img src="img/david.jpg"><a href="https://aronsagnit.github.io/WS02-MID1/?fbclid=IwAR3NisJzR-Fr3TZkXwSAllQWip3XRwy7usu2HyfOOvENFqR5loXnoNiNPAo"target="_blank" title="Visit DAVID's page">DAVID MARTINES</a> from CYBERPUNK</li>
+						<li><a href="https://aronsagnit.github.io/WS02-MID1/?fbclid=IwAR3NisJzR-Fr3TZkXwSAllQWip3XRwy7usu2HyfOOvENFqR5loXnoNiNPAo"target="_blank" title="Visit DAVID's page"><img src="img/david.jpg"></a><b>DAVID MARTINES</b> from CYBERPUNK</li>
 
-						<li><img src="img/marian.jpg"><a href="https://mariandesuu.github.io/WS02-MID1/?fbclid=IwAR0NHJY3MhNDxUScjUgGFhxpeEpaQsZY0xvWj7ND-G5315DLY3Cxr6RDUhQ" target="_blank" title="Visit CINNAMOROLL's page">CINNAMOROLL</a> from SANRIO</li>
+						<li><a href="https://mariandesuu.github.io/WS02-MID1/?fbclid=IwAR0NHJY3MhNDxUScjUgGFhxpeEpaQsZY0xvWj7ND-G5315DLY3Cxr6RDUhQ" target="_blank" title="Visit CINNAMOROLL's page"><img src="img/marian.jpg"></a><b>CINNAMOROLL</b> from SANRIO</li>
 					</ul>
 				</div>
 			</div>
