--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>BEN 10</title>
 	<link rel="stylesheet" type="text/css" href="my.css">
+	<link rel="shortcut icon" type="image/x-icon" href="img/ben15.png">
 </head>
 	<body>
 		<div class="wrapper">
