--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 						<li><a href="https://lexter-manuel.github.io/WS02-MID1/?fbclid=IwAR0zU_IDQGf7aBQXWch7_EOhyBIX_6uazyLEPxZ0P7wazj_10lHW006U3bA" target="_blank" title="Visit ISAGI's page"><img src="img/lex.jpg"></a><b>ISAGI YOICHI</b> from BLUE LOCK</li>
 
-						<li><a href="https://jennyroseformon.github.io/WS02-MID1/"target="_blank" title="Visit MERIDA's page"><img src="img/jeny.jpg"></a><b>KIM DOKJA</b> from BRAVE</li>
+						<li><a href="https://jennyroseformon.github.io/WS02-MID1/"target="_blank" title="Visit MERIDA's page"><img src="img/jeny.jpg"></a><b>MERIDA</b> from BRAVE</li>
 
 						<li><a href="https://aronsagnit.github.io/WS02-MID1/?fbclid=IwAR3NisJzR-Fr3TZkXwSAllQWip3XRwy7usu2HyfOOvENFqR5loXnoNiNPAo"target="_blank" title="Visit DAVID's page"><img src="img/david.jpg"></a><b>DAVID MARTINES</b> from CYBERPUNK</li>
 
